--- a/nasm-os-08/makefile
+++ b/nasm-os-08/makefile
@@ -4,17 +4,38 @@ HEADERS = $(wildcard kernel/*.h drivers/*.h cpu/*.h libc/*.h mm/*.h)
 OBJ = ${C_SOURCES:.c=.o cpu/interrupt.o kernel/swtch.o} 
 
 # Change this if your cross-compiler is somewhere else
+SRC_DIR=./
 CC = gcc -fno-pic
 GDB = gdb
 LD = ld -m elf_i386
 # -g: Use debugging symbols in gcc
 CFLAGS = -g -ffreestanding -Wall -Wextra -fno-exceptions -m32
+IFLAGS=-I${SRC_DIR}
 
 # First rule is run by default
+#os-image.bin: boot/bootsect.bin boot/entryother.bin kernel.bin padding.bin
+#	cat $^ > os-image.bin.tmp
+#	head -c65536 os-image.bin.tmp > os-image.bin
+#	@/bin/echo -n -e \\x01\\x00\\x00\\x00 >> os-image.bin
+#	@/bin/echo -n -e \\x68\\x65\\x6c\\x6c >> os-image.bin
+#	@/bin/echo -n -e \\x62\\x00\\x00\\x00 >> os-image.bin
+#	@/bin/echo -n -e \\x10\\x00\\x00\\x00 >> os-image.bin
+#	cat usr/hello2 >> os-image.bin
+#	cat padding.bin >> os-image.bin
+#	head -c102400 os-image.bin > os-image.bin.tmp
+#	mv os-image.bin.tmp os-image.bin
+
 os-image.bin: boot/bootsect.bin boot/entryother.bin kernel.bin padding.bin
 	cat $^ > os-image.bin.tmp
-	head -c102400 os-image.bin.tmp > os-image.bin
-	rm -f os-image.bin.tmp 
+	head -c65536 os-image.bin.tmp > os-image.bin
+	@/bin/echo -n -e \\x01\\x00\\x00\\x00 >> os-image.bin
+	@/bin/echo -n -e \\x68\\x65\\x6c\\x6c >> os-image.bin
+	@/bin/echo -n -e \\xe4\\x21\\x00\\x00 >> os-image.bin
+	@/bin/echo -n -e \\x10\\x00\\x00\\x00 >> os-image.bin
+	cat usr/out >> os-image.bin
+	cat padding.bin >> os-image.bin
+	head -c102400 os-image.bin > os-image.bin.tmp
+	mv os-image.bin.tmp os-image.bin
 
 padding.bin:
 	dd if=/dev/zero of=./padding.bin bs=100k count=1
@@ -39,7 +60,7 @@ debug: os-image.bin kernel.elf
 # Generic rules for wildcards
 # To make an object, always compile from its .c
 %.o: %.c ${HEADERS}
-	${CC} ${CFLAGS} -c $< -o $@
+	${CC} ${CFLAGS} $(IFLAGS) -c $< -o $@
 
 %.o: %.asm
 	nasm $< -f elf -o $@
@@ -49,4 +70,4 @@ debug: os-image.bin kernel.elf
 
 clean:
 	rm -rf *.bin *.dis *.o os-image.bin *.elf
-	rm -rf kernel/*.o boot/*.bin drivers/*.o boot/*.o cpu/*.o libc/*.o mm/*.o
+	rm -rf kernel/*.o boot/*.bin drivers/*.o boot/*.o cpu/*.o libc/*.o mm/*.o fs/*.o
